Add options for repeat intonation and separate stanzas in UI; update main.ts to handle new parameters

--- a/packages/frontend/index.html
+++ b/packages/frontend/index.html
@@ -43,8 +43,16 @@
 							<input type="text" id="separator" value="." />
 						</div>
 						<div class="option">
+							<input type="checkbox" id="repeatIntonation" checked />
+							<label for="repeatIntonation">Repetir entonação (salmo)</label>
+						</div>
+						<div class="option">
 							<input type="checkbox" id="addOptionalStart" checked />
 							<label for="addOptionalStart">Adicionar começo</label>
+						</div>
+						<div class="option">
+							<input type="checkbox" id="separateStanzas" checked />
+							<label for="separateStanzas">Separar estrofes (salmo)</label>
 						</div>
 						<div class="option">
 							<input type="checkbox" id="addOptionalEnd" checked />
